--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My GitHub Pages Site</title>
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="icon" type="image/png" href="img/favicon.png" />
+</head>
+<body>
+  <header>
+    <h1>Welcome to My Website</h1>
+    <p>This is a site hosted with GitHub Pages ✨</p>
+  </header>
+
+  <main>
+    <section>
+      <h2>About</h2>
+      <p>This is a basic HTML + CSS site, built and deployed straight from GitHub!</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2025 Your Name</p>
+  </footer>
+
+  <!-- Optional: JavaScript -->
+  <!-- <script src="js/script.js"></script> -->
+</body>
+</html>
