--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 
   <!-- 1. Navigation -->
   <header class="header">
-    <div class="logo">LOGO</div>
+    <div class="logo">
+      <a href="#">
+        <img src="img/logo_horizontal.png" alt="Logo de la empresa">
+      </a>
+    </div>
     <nav class="nav">
       <a href="#sobre-nosotros">Sobre nosotros</a>
       <a href="#servicios">Servicios</a>
@@ -33,7 +37,7 @@
   </section>
 
   <!-- 4. Servicios - first banner -->
-  <section class="servicios gray-bg">
+  <section class="servicios white-bg">
     <div class="servicio-container">
       <img src="img/servicios.png" alt="Servicio 1">
       <div class="text">
@@ -44,8 +48,8 @@
   </section>
 
   <!-- 5. Servicios - second banner -->
-  <section class="servicios white-bg">
-    <div class="servicio-container reverse">
+  <section class="servicios gray-bg">
+    <div class="servicio-container">
       <div class="text">
         <h2>Más Servicios</h2>
         <p>Descripción adicional del servicio.</p>
@@ -55,13 +59,22 @@
   </section>
 
   <!-- 6. Servicios - third banner -->
-  <section class="servicios lightblue-bg center-text">
+  <section class="servicios white-bg center-text">
     <h2>Otros Servicios</h2>
     <p>Más detalles de servicios ofrecidos.</p>
     <div class="images-row">
-      <img src="img/unidad1.png" alt="Img1">
-      <img src="img/unidad2.png" alt="Img2">
-      <img src="img/unidad3.png" alt="Img3">
+      <div class="image-item">
+        <p class="image-title">Título 1</p>
+        <img src="img/unidad1.png" alt="Img1">
+      </div>
+      <div class="image-item">
+        <p class="image-title">Título 2</p>
+        <img src="img/unidad2.png" alt="Img2">
+      </div>
+      <div class="image-item">
+        <p class="image-title">Título 3</p>
+        <img src="img/unidad3.png" alt="Img3">
+      </div>
     </div>
   </section>
 
