--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </section>
 
   <!-- 4. Servicios - first banner -->
-  <section class="servicios white-bg">
+  <section id="servicios" class="servicios white-bg">
     <div class="servicio-container">
       <img src="img/servicios.png" alt="Servicio 1">
       <div class="text">
