--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- 1. Navigation -->
   <header class="header">
     <div class="logo">
-      <a href="#">
+      <a href="#landing">
         <img src="img/logo_horizontal.png" alt="Logo de la empresa">
       </a>
     </div>
@@ -26,7 +26,7 @@
   </header>
 
   <!-- 2. Hero section with background image -->
-  <section class="hero">
+  <section id="landing" class="hero">
     <h1>Bienvenidos a Nuestro Sitio</h1>
   </section>
 
