--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
 
   <!-- 2. Hero section with background image -->
   <section id="landing" class="hero">
-    <h1>Bienvenidos a Nuestro Sitio</h1>
+    <h1>Tu solución en movimiento.</h1>
   </section>
 
   <!-- 3. Sobre Nosotros -->
   <section id="sobre-nosotros" class="sobre-nosotros">
-    <h2>Sobre nosotros</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla accumsan.</p>
+    <h2>¿Quiénes somos?</h2>
+    <p>Somos una empresa experta en transporte terrestre de carga especializada y/o material peligroso</p>
+    <p>Ubicados en Monterrey, N.L., tenemos más de 10 años brindando servicio a nuestros clientes en toda la República Mexicana</p>
   </section>
 
   <!-- 4. Servicios - first banner -->
@@ -42,7 +43,19 @@
       <img src="img/servicios.png" alt="Servicio 1">
       <div class="text">
         <h2>Servicios</h2>
-        <p>Descripción del servicio.</p>
+        <p>Ofrecemos transporte terrestre para:</p>
+        <ul>
+          <li>Carga especializada y/o materiales peligrosos</li>
+          <li>Productos HAZMAT</li>
+          <li>Polietileno</li>
+          <li>Polipropileno</li>
+          <li>Resinas</li>
+          <li>Productos a granel</li>
+          <li>Aceites, lubricantes y acumuladores</li>
+          <li>Hidrocarburos</li>
+          <li>Residuos y desechos</li>
+          <li>Y más...</li>       
+        </ul>
       </div>
     </div>
   </section>
@@ -51,8 +64,9 @@
   <section class="servicios gray-bg">
     <div class="servicio-container">
       <div class="text">
-        <h2>Más Servicios</h2>
-        <p>Descripción adicional del servicio.</p>
+        <h2>Cobertura</h2>
+        <p>Brindamos servicios de transporte de carga a toda la república Mexicana con cobertura especializada en Nuevo León y el norte del país.</p>
+        <p>También ofrecemos servicio de entrega para fletes locales en la zona metropolitana de Monterrey.</p>      
       </div>
       <img src="img/cobertura.png" alt="Servicio 2">
     </div>
@@ -60,19 +74,20 @@
 
   <!-- 6. Servicios - third banner -->
   <section class="servicios white-bg center-text">
-    <h2>Otros Servicios</h2>
-    <p>Más detalles de servicios ofrecidos.</p>
+    <h2>Unidades</h2>
+    <p>Contamos con unidades y equipamiento para todo tipo de entregas</p>
+    <p>Nuestras unidades también cuentan con rastreo GPS en tiempo real y aseguramiento por responsabilidad civil y ecología</p>
     <div class="images-row">
       <div class="image-item">
-        <p class="image-title">Título 1</p>
+        <p class="image-title">3.5 toneladas con redilas</p>
         <img src="img/unidad1.png" alt="Img1">
       </div>
       <div class="image-item">
-        <p class="image-title">Título 2</p>
+        <p class="image-title">8 toneladas con plataforma</p>
         <img src="img/unidad2.png" alt="Img2">
       </div>
       <div class="image-item">
-        <p class="image-title">Título 3</p>
+        <p class="image-title">Rampa hidráulica en todas las unidades</p>
         <img src="img/unidad3.png" alt="Img3">
       </div>
     </div>
@@ -82,8 +97,11 @@
   <section id="contacto" class="contacto gray-bg">
     <div class="contacto-container">
       <div class="contact-text">
-        <h2>Contáctanos</h2>
-        <p>Déjanos tu mensaje y nos pondremos en contacto contigo.</p>
+        <h2>Contacto</h2>
+        <p>Blvd. Puerta del Sol 936, Colinas de San Jemo 3o. Sector, 64630 Monterrey, N.L.</p>
+        <p>C: (81) 1044-8606</p>
+        <p>T: (81) 8864-6430</p>
+        <p>contacto@veyh.com.mx</p>
       </div>
       <form class="contact-form">
         <input type="text" placeholder="Nombre" required>
@@ -101,7 +119,7 @@
 
   <!-- 9. Footer -->
   <footer class="footer">
-    <p>&copy; 2025 Mi Sitio Web. Todos los derechos reservados.</p>
+    <p>&copy; 2025 VEYH S.A. de C.V. Todos los derechos reservados.</p>
   </footer>
 
 </body>
