--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <!-- 2. Hero section with background image -->
   <section id="landing" class="hero">
-    <img src="img/camiones2.png" alt="Camiones" class="hero-image">
+    <img src="img/flotillaveyh.png" alt="Camiones" class="hero-image">
     <h1>Tu solución en movimiento.</h1>
   </section>
 
