margins in text corrections 2

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   </section>
 
   <!-- 6. Servicios - third banner -->
-  <section class="servicios white-bg center-text">
+  <section class="servicios white-bg center-images">
     <h2>Unidades</h2>
     <p>Contamos con unidades y equipamiento para todo tipo de entregas</p>
     <p>Nuestras unidades también cuentan con rastreo GPS en tiempo real y aseguramiento por responsabilidad civil y ecología</p>
