margins and images corrections

--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
     <p>Nuestras unidades también cuentan con rastreo GPS en tiempo real y aseguramiento por responsabilidad civil y ecología</p>
     <div class="images-row">
       <div class="image-item">
-        <p class="image-title">3.5 toneladas con redilas</p>
-        <img src="img/unidad1.png" alt="Img1">
+        <p class="image-title">3.5 toneladas</p>
+        <img src="img/camiondodge1.png" alt="Img1">
       </div>
       <div class="image-item">
-        <p class="image-title">8 toneladas con plataforma</p>
-        <img src="img/unidad2.png" alt="Img2">
+        <p class="image-title">8 toneladas</p>
+        <img src="img/camionfreight1.png" alt="Img2">
       </div>
       <div class="image-item">
         <p class="image-title">Rampa hidráulica en todas las unidades</p>
