--- a/index.html
+++ b/index.html
@@ -81,15 +81,15 @@
     <div class="images-row">
       <div class="image-item">
         <p class="image-title">3.5 toneladas</p>
-        <img src="img/camiondodge2.png" alt="Img1">
+        <img src="img/camiondodge3.png" alt="Img1">
       </div>
       <div class="image-item">
         <p class="image-title">8 toneladas</p>
-        <img src="img/camionfreight2.png" alt="Img2">
+        <img src="img/camionfreight3.png" alt="Img2">
       </div>
       <div class="image-item">
         <p class="image-title">Rampa hidráulica en todas las unidades</p>
-        <img src="img/unidad3.png" alt="Img3">
+        <img src="img/rampahidr.png" alt="Img3">
       </div>
     </div>
   </section>
