added google analytics tag

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <!-- Add Paralucent font if available -->
   <link href="https://fonts.googleapis.com/css2?family=Paralucent:wght@700&display=swap" rel="stylesheet">
 </head>
+<!-- Google tag (gtag.js) -->
+ <script async src="https://www.googletagmanager.com/gtag/js?id=G-D13FWJ4710"></script>
+ <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-D13FWJ4710'); </script>
 <body>
 
   <!-- 1. Navigation -->
